# api/swagger.json
@@ -16,7 +16,7 @@
     "paths": {
         "/resources": {
             "get": {
-                "description": "Retourne une ressource spécifique en fonction de son ID",
+                "description": "Récupère la liste de toutes les ressources disponibles",
                 "consumes": [
                     "application/json"
                 ],
@@ -26,25 +26,10 @@
                 "tags": [
                     "Ressources"
                 ],
-                "summary": "Récupère une ressource par ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "ID de la ressource",
-                        "name": "id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
+                "summary": "Liste toutes les ressources",
                 "responses": {
-                    "400": {
-                        "description": "Invalid ID",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "Resource not found",
+                    "500": {
+                        "description": "Internal server error",
                         "schema": {
                             "type": "string"
                         }
@@ -66,6 +51,92 @@
                 "responses": {
                     "400": {
                         "description": "Invalid input",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/resources/{id}": {
+            "put": {
+                "description": "Met à jour une ressource via son ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Ressources"
+                ],
+                "summary": "Met à jour une ressource",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID de la ressource",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Resource updated successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Supprime une ressource via son ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Ressources"
+                ],
+                "summary": "Supprime une ressource",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID de la ressource",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Resource deleted successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid ID",
                         "schema": {
                             "type": "string"
                         }
